adding server settings default file copy when docker build is updated

--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -258,7 +258,7 @@ MultiHome=False
 MaxPlayers=40
 
 [MessageOfTheDay]
-Message=
+Message=itinstalled
 Duration=20
 
 [/Game/PrimalEarth/CoreBlueprints/TestGameMode.TestGameMode_C]
