--- a/arkmanager-user.cfg
+++ b/arkmanager-user.cfg
@@ -1,6 +1,6 @@
 # ARK server options - use ark_<optionname>=<value>
 # comment out these values if you want to define them
-# inside your GameUserSettings.ini file
+# inside your config.GameUserSettings.ini file
 serverMap="${SERVERMAP:=TheIsland}"                                 # server map (default TheIsland)
 #serverMapModId="469987622"                                         # Uncomment this to specify the Map Mod Id (<fileid> in http://steamcommunity.com/sharedfiles/filedetails/?id=<fileid>)
 #ark_TotalConversionMod="496735411"                                 # Uncomment this to specify a total-conversion mod
@@ -16,8 +16,8 @@ ark_ServerPVE="${SERVER_PVE:=false}"                                       # Ena
 ark_MaxPlayers="${MAX_PLAYERS:=15}"
 ark_GameModIds="${MODS}"                                            # Uncomment to specify additional mods by Mod Id separated by commas
 arkopt_clusterid="${CLUSTER_ID}"
-arkGameUserSettingsIniFile="${GAME_USERSETTINGS_INI_PATH}"
-arkGameIniFile="${GAME_INI_PATH}"
+#arkGameUserSettingsIniFile="${GAME_USERSETTINGS_INI_PATH}"
+#arkGameIniFile="${GAME_INI_PATH}"
 #ark_AltSaveDirectoryName="SotF"                                    # Uncomment to specify a different save directory name
 
 # ARK server flags - use arkflag_<optionname>=true
