--- a/arkmanager-user.cfg
+++ b/arkmanager-user.cfg
@@ -16,8 +16,8 @@ ark_ServerPVE="${SERVER_PVE:=false}"                                       # Ena
 ark_MaxPlayers="${MAX_PLAYERS:=15}"
 ark_GameModIds="${MODS}"                                            # Uncomment to specify additional mods by Mod Id separated by commas
 arkopt_clusterid="${CLUSTER_ID}"
-#arkGameUserSettingsIniFile="${GAME_USERSETTINGS_INI_PATH}"
-#arkGameIniFile="${GAME_INI_PATH}"
+arkGameUserSettingsIniFile="config.GameUserSettings.ini"
+arkGameIniFile="config.Game.ini"
 #ark_AltSaveDirectoryName="SotF"                                    # Uncomment to specify a different save directory name
 
 # ARK server flags - use arkflag_<optionname>=true
