--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -222,6 +222,19 @@ AutoDestroyDecayedDinos=False
 MaxTamedDinos=5000
 MaxPersonalTamedDinos=40.000000
 PersonalTamedDinosSaddleStructureCost=19
+ServerCrosshair=1
+serverForceNoHud=0
+serverHardcore=0
+serverPVE=0
+ShowMapPlayerLocation=1
+StructureDamageMultiplier=1.00000
+StructureResistanceMultiplier=1.00000
+TamedDinoDamageMultiplier=1.00000
+TamedDinoResistanceMultiplier=1.00000
+TamingSpeedMultiplier=3.00000
+XPMultiplier=2.00000
+EnablePVPGamma=1
+EnablePVEGamma=0
 DisableImprintDinoBuff=False
 AllowAnyoneBabyImprintCuddle=False
 UseOptimizedHarvestingHealth=False
