adding some more settings

--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -23,6 +23,10 @@ CropGrowthSpeedMultiplier=3.000000
 MatingSpeedMultiplier=20.000000
 BabyCuddleIntervalMultiplier=0.05
 BabyImprintAmountMultiplier=2.000000
+AlwaysAllowStructurePickup=True
+
+[StructuresPlus]	
+EnableEngramOverride=True
 
 [/script/engine.gamesession]
 MaxPlayers=40
