--- a/serversettings/config.Game.ini
+++ b/serversettings/config.Game.ini
@@ -1,8 +1,30 @@
 [/script/shootergame.shootergamemode]
-GlobalItemDecompositionTimeMultiplier=2.000000
-GlobalCorpseDecompositionTimeMultiplier=2.000000
-bUseCorpseLocator=True
+; Harvesting settings
+HarvestAmountMultiplier=2.0
+HarvestHealthMultiplier=2.0
+
+; Taming settings
+TamingSpeedMultiplier=2.0
+
+; Breeding settings
+MatingIntervalMultiplier=0.5
+EggHatchSpeedMultiplier=2.0
+BabyMatureSpeedMultiplier=2.0
+BabyCuddleIntervalMultiplier=0.5
 LayEggIntervalMultiplier=0.5
-UseCorpseLifeSpanMultiplier=2.000000
-PerLevelStatsMultiplier_Player[7]=2.0
-PerLevelStatsMultiplier_Player[9]=2.0
+
+; Item and corpse decomposition
+GlobalItemDecompositionTimeMultiplier=2.0
+GlobalCorpseDecompositionTimeMultiplier=2.0
+UseCorpseLifeSpanMultiplier=2.0
+
+; Miscellaneous
+DayCycleSpeedScale=0.5
+NightTimeSpeedScale=2.0
+DayTimeSpeedScale=0.5
+ResourceNoReplenishRadiusPlayers=0.5
+ResourceNoReplenishRadiusStructures=0.5
+
+; Player stat multipliers
+PerLevelStatsMultiplier_Player[7]=2.0 ; Increases weight
+PerLevelStatsMultiplier_Player[9]=2.0 ; Increases fortitude
