--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -1,32 +1,35 @@
 [ServerSettings]
+ServerAdminPassword=your_admin_password
+ServerPassword=your_server_password
 ServerCrosshair=True
 AllowThirdPersonPlayer=True
 ShowMapPlayerLocation=True
 TheMaxStructuresInRange=100
-DifficultyOffset=1.000000
-XPMultiplier=2.000000
-PvEDinoDecayPeriodMultiplier=3.000000
-TamingSpeedMultiplier=3.000000
-HarvestAmountMultiplier=3.000000
-HarvestHealthMultiplier=1.500000
-PerPlatformMaxStructuresMultiplier=1.500000
-PlayerCharacterWaterDrainMultiplier=0.800000
-PlayerCharacterFoodDrainMultiplier=0.800000
-AutoSavePeriodMinutes=15.000000
+DifficultyOffset=1.0
+XPMultiplier=200.0
+PvEDinoDecayPeriodMultiplier=3.0
+TamingSpeedMultiplier=3.0
+HarvestAmountMultiplier=3.0
+HarvestHealthMultiplier=1.5
+PerPlatformMaxStructuresMultiplier=1.5
+PlayerCharacterWaterDrainMultiplier=0.8
+PlayerCharacterFoodDrainMultiplier=0.8
+AutoSavePeriodMinutes=15.0
 EnablePvPGamma=True
 ActiveMods=731604991,1404697612,821530042
 AdminLogging=True
 MatingIntervalMultiplier=0.25
-BabyMatureSpeedMultiplier=20.000000
-EggHatchSpeedMultiplier=20.000000
-CropGrowthSpeedMultiplier=3.000000
-MatingSpeedMultiplier=20.000000
+BabyMatureSpeedMultiplier=20.0
+EggHatchSpeedMultiplier=20.0
+CropGrowthSpeedMultiplier=3.0
+MatingSpeedMultiplier=20.0
 BabyCuddleIntervalMultiplier=0.05
-BabyImprintAmountMultiplier=2.000000
+BabyImprintAmountMultiplier=2.0
 AlwaysAllowStructurePickup=True
 
-[StructuresPlus]	
-EnableEngramOverride=True
+[MessageOfTheDay]
+Message=Welcome to our ARK server! Enjoy your stay!
+Duration=10
 
-[/script/engine.gamesession]
-MaxPlayers=40
+[StructuresPlus]
+EnableEngramOverride=True
