updating ark config files again

--- a/serversettings/config.Game.ini
+++ b/serversettings/config.Game.ini
@@ -1,8 +1,58 @@
 [/script/shootergame.shootergamemode]
+MaxTribeLogs=400
+bDisableFriendlyFire=True
+bPvEDisableFriendlyFire=False
+bDisableLootCrates=False
+bIncreasePvPRespawnInterval=False
+bAutoPvETimer=False
+MaxNumberOfPlayersInTribe=70
+MaxAlliancesPerTribe=10
+MaxTribesPerAlliance=10
+bPvEAllowTribeWar=True
+bPvEAllowTribeWarCancel=False
+bAllowCustomRecipes=True
+bUseCorpseLocator=True
+bAllowUnlimitedRespecs=False
+bAllowPlatformSaddleMultiFloors=False
+GlobalPoweredBatteryDurabilityDecreasePerSecond=3.000000
+bDisableGenesisMissions=False
+bDisableDefaultMapItemSets=False
+bDisableWorldBuffs=False
+bEnableWorldBuffScaling=False
+AdjustableMutagenSpawnDelayMultiplier=1.000000
+BaseHexagonRewardMultiplier=1.000000
+HexagonCostMultiplier=1.000000
+DinoHarvestingDamageMultiplier=3.200000
+bUseDinoLevelUpAnimations=False
+bAllowUnclaimDinos=True
+StructureDamageRepairCooldown=600
+PvPZoneStructureDamageMultiplier=6.000000
+bPassiveDefensesDamageRiderlessDinos=False
+bDisableStructurePlacementCollision=False
+bLimitTurretsInRange=False
+bHardLimitTurretsInRange=False
+bIgnoreStructuresPreventionVolumes=False
+bGenesisUseStructuresPreventionVolumes=False
+UseCorpseLifeSpanMultiplier=3.000000
 GlobalItemDecompositionTimeMultiplier=2.000000
 GlobalCorpseDecompositionTimeMultiplier=2.000000
-bUseCorpseLocator=True
-LayEggIntervalMultiplier=0.5
-UseCorpseLifeSpanMultiplier=2.000000
+LayEggIntervalMultiplier=0.500000
+FishingLootQualityMultiplier=2.000000
+PreventOfflinePvPConnectionInvincibleInterval=5
+CraftingSkillBonusMultiplier=2.000000
+MatingIntervalMultiplier=0.100000
+MatingSpeedMultiplier=10.000000
+EggHatchSpeedMultiplier=10.000000
+BabyMatureSpeedMultiplier=10.000000
+BabyImprintingStatScaleMultiplier=2.000000
+BabyImprintAmountMultiplier=2.000000
+BabyCuddleIntervalMultiplier=0.100000
+CropGrowthSpeedMultiplier=5.000000
+CraftXPMultiplier=2.000000
+GenericXPMultiplier=2.000000
+HarvestXPMultiplier=2.000000
+KillXPMultiplier=2.000000
+SpecialXPMultiplier=2.000000
+bAutoUnlockAllEngrams=True
 PerLevelStatsMultiplier_Player[7]=2.0
 PerLevelStatsMultiplier_Player[9]=2.0
