--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -1,32 +1,115 @@
+[SessionSettings]
+SessionName=Unnamed Server
+Port=7777
+QueryPort=27015
+MultiHome=
+
 [ServerSettings]
+ServerPassword=HcE5y71aS0Dnbi9X
+ServerAdminPassword=aTWR6fzFKDTAvMrk
+SpectatorPassword=
+RCONEnabled=False
+RCONPort=32330
+RCONServerGameLogBuffer=600
+AdminLogging=True
+ActiveMods=
+AutoSavePeriodMinutes=15.000000
+TribeLogDestroyedEnemyStructures=False
+AllowHideDamageSourceFromLogs=False
+bFilterTribeNames=False
+bFilterCharacterNames=False
+bFilterChat=False
+AllowSharedConnections=True
+ServerHardcore=False
+ServerPVE=False
+AllowCaveBuildingPvE=False
+AllowCaveBuildingPvP=True
+EnableExtraStructurePreventionVolumes=False
+NoTributeDownloads=False
+PreventUploadSurvivors=False
+PreventUploadItems=False
+PreventUploadDinos=False
+CrossARKAllowForeignDinoDownloads=False
+PreventOfflinePvP=True
+TribeNameChangeCooldown=15
+PreventTribeAlliances=False
+PreventDiseases=False
+NonPermanentDiseases=False
+PreventSpawnAnimations=False
+PlatformSaddleBuildAreaBoundsMultiplier=1.000000
+MaxGateFrameOnSaddles=2
+RandomSupplyCratePoints=False
+AllowTekSuitPowersInGenesis=False
+EnableCryoSicknessPVE=False
+MaxHexagonsPerCharacter=2000000000
+globalVoiceChat=False
+proximityChat=False
+alwaysNotifyPlayerLeft=False
+DontAlwaysNotifyPlayerJoined=False
 ServerCrosshair=True
+ServerForceNoHud=False
 AllowThirdPersonPlayer=True
 ShowMapPlayerLocation=True
-TheMaxStructuresInRange=100
-DifficultyOffset=1.000000
+EnablePVPGamma=True
+DisablePvEGamma=False
+ShowFloatingDamageText=True
+AllowHitMarkers=True
+AllowFlyerCarryPVE=True
+AllowRaidDinoFeeding=False
+DisableDinoDecayPvE=False
+PvPDinoDecay=False
+AutoDestroyDecayedDinos=False
+MaxTamedDinos=5000
+MaxPersonalTamedDinos=500.000000
+PersonalTamedDinosSaddleStructureCost=19
+DisableImprintDinoBuff=False
+AllowAnyoneBabyImprintCuddle=False
+UseOptimizedHarvestingHealth=False
+ClampResourceHarvestDamage=False
+ClampItemSpoilingTimes=False
+PvPStructureDecay=True
+TheMaxStructuresInRange=10500
+DisableStructureDecayPVE=True
+ForceAllStructureLocking=False
+OnlyAutoDestroyCoreStructures=False
+OnlyDecayUnsnappedCoreStructures=False
+FastDecayUnsnappedCoreStructures=False
+DestroyUnconnectedWaterPipes=False
+IgnoreLimitMaxStructuresInRangeTypeFlag=False
+AlwaysAllowStructurePickup=True
+StructurePickupTimeAfterPlacement=3600.000000
+StructurePickupHoldDuration=0.500000
+AllowIntegratedSPlusStructures=True
+TamingSpeedMultiplier=5.000000
+OverrideOfficialDifficulty=8.000000
+DifficultyOffset=2.000000
+PreventDownloadSurvivors=False
+PreventDownloadItems=False
+PreventDownloadDinos=False
+PreventOfflinePvPInterval=900
+OxygenSwimSpeedStatMultiplier=2.000000
+UseFjordurTraversalBuff=True
 XPMultiplier=2.000000
-PvEDinoDecayPeriodMultiplier=3.000000
-TamingSpeedMultiplier=3.000000
-HarvestAmountMultiplier=3.000000
-HarvestHealthMultiplier=1.500000
-PerPlatformMaxStructuresMultiplier=1.500000
 PlayerCharacterWaterDrainMultiplier=0.800000
 PlayerCharacterFoodDrainMultiplier=0.800000
-AutoSavePeriodMinutes=15.000000
-EnablePvPGamma=True
-ActiveMods=731604991,1404697612,821530042
-AdminLogging=True
-MatingIntervalMultiplier=0.25
-BabyMatureSpeedMultiplier=20.000000
-EggHatchSpeedMultiplier=20.000000
-CropGrowthSpeedMultiplier=3.000000
-MatingSpeedMultiplier=20.000000
-BabyCuddleIntervalMultiplier=0.05
-BabyImprintAmountMultiplier=2.000000
-AlwaysAllowStructurePickup=True
+DinoCountMultiplier=1.200000
+HarvestAmountMultiplier=3.000000
+ResourcesRespawnPeriodMultiplier=0.900000
+HarvestHealthMultiplier=2.000000
+StructureResistanceMultiplier=0.200000
+StructureDamageMultiplier=2.000000
+OverrideStructurePlatformPrevention=True
+AutoDestroyOldStructuresMultiplier=1.000000
 
-[StructuresPlus]	
+[MultiHome]
+MultiHome=False
+
+[/Script/Engine.GameSession]
+MaxPlayers=70
+
+[MessageOfTheDay]
+Message=
+Duration=20
+
+[StructuresPlus]
 EnableEngramOverride=True
-
-[/script/engine.gamesession]
-MaxPlayers=40
