--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -1,106 +1,46 @@
-[ServerSettings]
-ServerPassword=HcE5y71aS0Dnbi9X
-ServerAdminPassword=aTWR6fzFKDTAvMrk
-SpectatorPassword=
-RCONServerGameLogBuffer=600
 AdminLogging=True
-ActiveMods=
-AutoSavePeriodMinutes=15.000000
-TribeLogDestroyedEnemyStructures=False
+AllowCaveBuildingPvP=True
 AllowHideDamageSourceFromLogs=False
-bFilterTribeNames=False
+AllowHitMarkers=True
+AllowIntegratedSPlusStructures=True
+AllowSharedConnections=True
+AllowThirdPersonPlayer=True
+AlwaysAllowStructurePickup=True
+AutoDestroyOldStructuresMultiplier=1.000000
+AutoSavePeriodMinutes=15.000000
 bFilterCharacterNames=False
 bFilterChat=False
-AllowSharedConnections=True
-ServerHardcore=False
-ServerPVE=False
-AllowCaveBuildingPvE=False
-AllowCaveBuildingPvP=True
-EnableExtraStructurePreventionVolumes=False
-NoTributeDownloads=False
-PreventUploadSurvivors=False
-PreventUploadItems=False
-PreventUploadDinos=False
-CrossARKAllowForeignDinoDownloads=False
-PreventOfflinePvP=True
-TribeNameChangeCooldown=15
-PreventTribeAlliances=False
-PreventDiseases=False
-NonPermanentDiseases=False
-PreventSpawnAnimations=False
-PlatformSaddleBuildAreaBoundsMultiplier=1.000000
-MaxGateFrameOnSaddles=2
-RandomSupplyCratePoints=False
-AllowTekSuitPowersInGenesis=False
-EnableCryoSicknessPVE=False
-MaxHexagonsPerCharacter=2000000000
-globalVoiceChat=False
-proximityChat=False
-alwaysNotifyPlayerLeft=False
-DontAlwaysNotifyPlayerJoined=False
-ServerCrosshair=True
-ServerForceNoHud=False
-AllowThirdPersonPlayer=True
-ShowMapPlayerLocation=True
-EnablePVPGamma=True
-DisablePvEGamma=False
-ShowFloatingDamageText=True
-AllowHitMarkers=True
-AllowFlyerCarryPVE=True
-AllowRaidDinoFeeding=False
-DisableDinoDecayPvE=False
-PvPDinoDecay=False
-AutoDestroyDecayedDinos=False
-MaxTamedDinos=5000
-MaxPersonalTamedDinos=500.000000
-PersonalTamedDinosSaddleStructureCost=19
-DisableImprintDinoBuff=False
-AllowAnyoneBabyImprintCuddle=False
-UseOptimizedHarvestingHealth=False
-ClampResourceHarvestDamage=False
-ClampItemSpoilingTimes=False
-PvPStructureDecay=True
-TheMaxStructuresInRange=10500
-DisableStructureDecayPVE=True
-ForceAllStructureLocking=False
-OnlyAutoDestroyCoreStructures=False
-OnlyDecayUnsnappedCoreStructures=False
-FastDecayUnsnappedCoreStructures=False
-DestroyUnconnectedWaterPipes=False
-IgnoreLimitMaxStructuresInRangeTypeFlag=False
-AlwaysAllowStructurePickup=True
-StructurePickupTimeAfterPlacement=3600.000000
-StructurePickupHoldDuration=0.500000
-AllowIntegratedSPlusStructures=True
-TamingSpeedMultiplier=5.000000
-OverrideOfficialDifficulty=8.000000
+bFilterTribeNames=False
 DifficultyOffset=2.000000
-PreventDownloadSurvivors=False
-PreventDownloadItems=False
-PreventDownloadDinos=False
-PreventOfflinePvPInterval=900
-OxygenSwimSpeedStatMultiplier=2.000000
-UseFjordurTraversalBuff=True
-XPMultiplier=2.000000
-PlayerCharacterWaterDrainMultiplier=0.800000
-PlayerCharacterFoodDrainMultiplier=0.800000
 DinoCountMultiplier=1.200000
+EnableExtraStructurePreventionVolumes=False
+EnablePVPGamma=True
 HarvestAmountMultiplier=3.000000
-ResourcesRespawnPeriodMultiplier=0.900000
 HarvestHealthMultiplier=2.000000
-StructureResistanceMultiplier=0.200000
-StructureDamageMultiplier=2.000000
+MaxPersonalTamedDinos=500.000000
+MaxTamedDinos=5000
+OxygenSwimSpeedStatMultiplier=2.000000
+OverrideOfficialDifficulty=8.000000
 OverrideStructurePlatformPrevention=True
-AutoDestroyOldStructuresMultiplier=1.000000
-
-[MultiHome]
-MultiHome=False
-
-[/Script/Engine.GameSession]
-MaxPlayers=70
+PlayerCharacterFoodDrainMultiplier=0.800000
+PlayerCharacterWaterDrainMultiplier=0.800000
+PreventOfflinePvP=True
+PvPStructureDecay=True
+ResourcesRespawnPeriodMultiplier=0.900000
+ServerCrosshair=True
+ShowFloatingDamageText=True
+ShowMapPlayerLocation=True
+StructureDamageMultiplier=2.000000
+StructurePickupHoldDuration=0.500000
+StructurePickupTimeAfterPlacement=3600.000000
+StructureResistanceMultiplier=0.200000
+TamingSpeedMultiplier=5.000000
+TheMaxStructuresInRange=10500
+TribeNameChangeCooldown=15
+XPMultiplier=2.000000
 
 [MessageOfTheDay]
-Message=
+Message="Welcome to NullSec"
 Duration=20
 
 [StructuresPlus]
