tweak harvest settings and slightly tweak xp multiplier

--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -176,7 +176,7 @@ DifficultyOffset=2.000000
 DinoCountMultiplier=1.200000
 EnableExtraStructurePreventionVolumes=False
 EnablePVPGamma=True
-HarvestAmountMultiplier=3.000000
+HarvestAmountMultiplier=1.500000
 HarvestHealthMultiplier=2.000000
 MaxPersonalTamedDinos=500.000000
 MaxTamedDinos=5000
@@ -198,7 +198,7 @@ StructureResistanceMultiplier=0.200000
 TamingSpeedMultiplier=5.000000
 TheMaxStructuresInRange=10500
 TribeNameChangeCooldown=15
-XPMultiplier=2.000000
+XPMultiplier=1.5000000
 
 [MessageOfTheDay]
 Message="Welcome to NullSec"
