--- a/serversettings/config.GameUserSettings.ini
+++ b/serversettings/config.GameUserSettings.ini
@@ -199,6 +199,7 @@ TamingSpeedMultiplier=5.000000
 TheMaxStructuresInRange=10500
 TribeNameChangeCooldown=15
 XPMultiplier=1.5000000
+PerPlatformMaxStructuresMultiplier=10
 
 [MessageOfTheDay]
 Message="Welcome to NullSec"
